Improve mutation coverage